# Django-backend-2part

./: .gitignore  README.MD  manage_user_app.py  pyproject.toml
user_app/: .env-template  admin.py  apps.py  config.py  crud.py
user_app/api/v1/: serializers.py  urls.py  users.py
user_app/migrations/: 0001_initial.py  0002_user_last_login.py
user_app/models/: models.py
user_app/services/: db_helper.py
user_app_project/: asgi.py  settings.py  urls.py  wsgi.py
utils/: case_converter.py
